src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__continue_not_in_loop.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: msg
---
error[E071]: Cannot continue loop when not inside a loop
  ┌─ <internal>:6:13
  │
6 │             CONTINUE;
  │             ^^^^^^^^ Cannot continue loop when not inside a loop


